[gd_scene load_steps=2 format=3 uid="uid://b2pijgg1eb8sg"]

[ext_resource type="Script" uid="uid://d2qybkm7aby25" path="res://addons/AudioCafe/scripts/audio_panel.gd" id="1_wixt7"]

[node name="CafeAudioManager" type="VBoxContainer"]
offset_right = 440.0
offset_bottom = 351.0
script = ExtResource("1_wixt7")

[node name="HeaderButton" type="Button" parent="."]
custom_minimum_size = Vector2(0, 38)
layout_mode = 2
text = "AudioCafe"
flat = true
alignment = 0

[node name="CollapsibleContent" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 309)
layout_mode = 2
size_flags_vertical = 3

[node name="AudioManifest" type="Button" parent="CollapsibleContent"]
custom_minimum_size = Vector2(0, 34)
layout_mode = 2
tooltip_text = "Generates the AudioManifest.tres file."
text = "Generate Audio Manifest"

[node name="ManifestProgressBar" type="ProgressBar" parent="CollapsibleContent"]
visible = false
layout_mode = 2

[node name="ManifestStatusLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CollapsibleContent"]
layout_mode = 2

[node name="SFXFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="MusicFolderDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2

[node name="TabContainer" type="TabContainer" parent="CollapsibleContent"]
layout_mode = 2
size_flags_vertical = 0
current_tab = 0
tabs_rearrange_group = 0

[node name="Paths" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
custom_minimum_size = Vector2(0, 232)
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 0

[node name="MusicPathsSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Paths"]
layout_mode = 2

[node name="MusicPathsLabel" type="Label" parent="CollapsibleContent/TabContainer/Paths/MusicPathsSection"]
layout_mode = 2
text = "Music Paths:"

[node name="MusicPathsGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Paths/MusicPathsSection"]
layout_mode = 2

[node name="AddMusicPathButton" type="Button" parent="CollapsibleContent/TabContainer/Paths/MusicPathsSection"]
layout_mode = 2
text = "Add Music Path"

[node name="SFXPathsSection" type="VBoxContainer" parent="CollapsibleContent/TabContainer/Paths"]
layout_mode = 2

[node name="SFXPathsLabel" type="Label" parent="CollapsibleContent/TabContainer/Paths/SFXPathsSection"]
layout_mode = 2
text = "SFX Paths:"

[node name="SFXPathsGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/Paths/SFXPathsSection"]
layout_mode = 2

[node name="AddSFXPathButton" type="Button" parent="CollapsibleContent/TabContainer/Paths/SFXPathsSection"]
layout_mode = 2
text = "Add SFX Path"

[node name="DefaultKeys" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
custom_minimum_size = Vector2(0, 232)
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 1

[node name="DefaultKeyGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/DefaultKeys"]
layout_mode = 2
theme_override_constants/h_separation = 6
theme_override_constants/v_separation = 6
columns = 2

[node name="DefaultClickKeyLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
tooltip_text = "The default SFX key for UI click events."
mouse_filter = 1
text = "Default Click Key:"

[node name="DefaultClickKeyLineEdit" type="LineEdit" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The default SFX key for UI click events."
text = "ui_click"
placeholder_text = "ui_click"

[node name="DefaultSliderKeyLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
text = "Default Slider Key:"

[node name="DefaultSliderKeyLineEdit" type="LineEdit" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The default SFX key for value change events in sliders and similar UI elements."
text = "ui_slider_changed"
placeholder_text = "ui_slider_changed"

[node name="DefaultHoverKeyLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
custom_minimum_size = Vector2(146, 0)
layout_mode = 2
text = "Default Hover Key:"

[node name="DefaultHoverKeyLineEdit" type="LineEdit" parent="CollapsibleContent/TabContainer/DefaultKeys/DefaultKeyGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The default SFX key for UI hover events."
text = "ui_rollover"
placeholder_text = "ui_hover"

[node name="HSeparator2" type="HSeparator" parent="CollapsibleContent/TabContainer/DefaultKeys"]
layout_mode = 2

[node name="VolumeGridContainer" type="GridContainer" parent="CollapsibleContent/TabContainer/DefaultKeys"]
layout_mode = 2
columns = 3

[node name="MasterVolumeLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Master Volume:"

[node name="MasterVolumeSlider" type="HSlider" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="MasterVolumeValueLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="SFXVolumeLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "SFX Volume:"

[node name="SFXVolumeSlider" type="HSlider" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFXVolumeValueLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicVolumeLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Music Volume:"

[node name="MusicVolumeSlider" type="HSlider" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01
value = 1.0

[node name="MusicVolumeValueLabel" type="Label" parent="CollapsibleContent/TabContainer/DefaultKeys/VolumeGridContainer"]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "100%"
horizontal_alignment = 2

[node name="MusicList" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 2

[node name="MusicKeysRichTextLabel" type="RichTextLabel" parent="CollapsibleContent/TabContainer/MusicList"]
custom_minimum_size = Vector2(0, 232)
layout_mode = 2
size_flags_vertical = 0
fit_content = true

[node name="SFXList" type="VBoxContainer" parent="CollapsibleContent/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10
metadata/_tab_index = 3

[node name="SFXKeysRichTextLabel" type="RichTextLabel" parent="CollapsibleContent/TabContainer/SFXList"]
custom_minimum_size = Vector2(0, 232)
layout_mode = 2
size_flags_vertical = 2

[node name="MusicTrackFileDialog" type="FileDialog" parent="CollapsibleContent"]
title = "Open a File"
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.ogg,*.wav")

[node name="SaveFeedbackLabel" type="Label" parent="CollapsibleContent"]
visible = false
layout_mode = 2
text = "Saved!"
horizontal_alignment = 1

[node name="SaveFeedbackTimer" type="Timer" parent="CollapsibleContent"]
wait_time = 1.5
one_shot = true

[connection signal="pressed" from="HeaderButton" to="." method="_on_header_button_pressed"]
[connection signal="pressed" from="CollapsibleContent/AudioManifest" to="." method="_on_audio_manifest_pressed"]
[connection signal="timeout" from="CollapsibleContent/SaveFeedbackTimer" to="." method="_on_save_feedback_timer_timeout"]
